configured tailwindcss and built a navbar

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "tailwindcss": "^1.8.10"
+  },
+  "devDependencies": {
+    "postcss-preset-env": "^6.7.0"
   }
 }
